coded lookup but not working

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ app.log
 code/__pycache__/algorithms.cpython-36.pyc
 code/__pycache__/RainbowTable.cpython-36.pyc
 code/__pycache__/constants.cpython-36.pyc
+output.rt
+config/config.ini
