CircleCi first build

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ code/__pycache__/RainbowTable.cpython-36.pyc
 code/__pycache__/constants.cpython-36.pyc
 output.rt
 config/config.ini
+.vscode/settings.json
