config fix for coveralls

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,20 +6,20 @@ jobs:
     steps:
       - checkout
       - run:
-        name: Setup testing environment
-        command: |
-          pip install '.[test]' --user
-          echo $HOME
-    - run:
-        name: Run Tests
-        command: |
-          $HOME/.local/bin/coverage run -m pytest
-          $HOME/.local/bin/coverage report
-          $HOME/.local/bin/coverage html  # open htmlcov/index.html in a browser
-    - store_artifacts:
-        path: htmlcov
+          name: Setup testing environment
+          command: |
+            pip install '.[test]' --user
+            echo $HOME
+      - run:
+          name: Run Tests
+          command: |
+            $HOME/.local/bin/coverage run -m pytest
+            $HOME/.local/bin/coverage report
+            $HOME/.local/bin/coverage html  # open htmlcov/index.html in a browser
+      - store_artifacts:
+          path: htmlcov
 workflows:
   version: 2
   workflow:
     jobs:
-    - build
+    - buildname: Setup testing environment circleci
