--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,34 @@
-.vscode/.ropeproject/objectdb
-app.log
-.vscode/.ropeproject/config.py
-code/__pycache__/algorithms.cpython-36.pyc
-code/__pycache__/RainbowTable.cpython-36.pyc
-code/__pycache__/constants.cpython-36.pyc
-output.rt
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+
+# Distribution / packaging
+bin/
+build/
+develop-eggs/
+dist/
+eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+.tox/
+.coverage
+.cache
+.pytest_cache/
+nosetests.xml
+coverage.xml
+
 config/config.ini
-.vscode/settings.json
+.vscode/
+*.log
