--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,10 +11,16 @@ jobs:
     steps:
       - checkout
       - run: pip install pytest coveralls --user
-      - run: $HOME/.local/bin/coverage run -m pytest
+      - run: $HOME/.local/bin/coverage run -m pytest --junitxml=test-reports/junit.xml
       - run: $HOME/.local/bin/coverage report
       - run: $HOME/.local/bin/coverage html
       - run: $HOME/.local/bin/coveralls
+
+      - store_test_results:
+          path: test-reports
+
+      - store_artifacts:
+          path: test-reports
 
 workflows:
   version: 2
