--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,6 @@
 version: 2
 jobs:
   build:
-    working_directory: ~/rainbowhub
     docker:
       - image: circleci/python:3.7.1
     steps:
@@ -12,7 +11,7 @@ jobs:
     steps:
       - checkout
       - run: pip install pytest coveralls --user
-      - run: ~/.local/bin/coverage run --source=~/rainbowhub/test/ -m pytest --junitxml=test-reports/junit.xml
+      - run: ~/.local/bin/coverage run --source=rainbowhub/ -m pytest --junitxml=test-reports/junit.xml
       - run: ~/.local/bin/coverage report
       - run: ~/.local/bin/coverage html
       - run: ~/.local/bin/coveralls
