--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,11 +10,8 @@ jobs:
       - image: circleci/python:3.7.1
     steps:
       - checkout
-      - run: pip install pytest coveralls --user
-      - run: ~/.local/bin/coverage run --source=rainbowhub/ -m pytest --junitxml=test-reports/junit.xml
-      - run: ~/.local/bin/coverage report
-      - run: ~/.local/bin/coverage html
-      - run: ~/.local/bin/coveralls
+      - run: pip install pytest --user
+      - run: pytest
 
       - store_test_results:
           path: test-reports
