--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - checkout
       - run: pip install pytest --user
-      - run: pytest
+      - run: python -m pytest
 
       - store_test_results:
           path: test-reports
