--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,6 @@
 version: 2
+orbs:
+  codecov: codecov/codecov@1.0.2
 jobs:
   build:
     docker:
@@ -10,8 +12,9 @@ jobs:
       - image: circleci/python:3.7.1
     steps:
       - checkout
-      - run: pip install pytest --user
-      - run: python -m pytest
+      - run: pip install pytest pytest-cov --user
+      - run: python -m pytest --cov=rainbowtable
+      - run: codecov
 
       - store_test_results:
           path: test-reports
