--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
       - run: pip install pytest pytest-cov --user
       - run: python -m pytest --cov=rainbowtable
       - codecov/upload:
-          file: {{ coverage_report_filepath }} 
+          file: .coverage 
 
       - store_test_results:
           path: test-reports
