--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,4 @@
-version: 2.1
+version: 2
 orbs:
   codecov: codecov/codecov@1.0.2
 jobs:
@@ -15,7 +15,7 @@ jobs:
       - run: pip install pytest pytest-cov --user
       - run: python -m pytest --cov=rainbowtable
       - codecov/upload:
-          file: .coverage
+          flags: rainbowtable
 
 workflows:
   version: 2
