--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - image: circleci/python:3.7.1
     steps:
       - checkout
-      - run: pip install pytest pytest-cov codecov --user
+      - run: sudo pip install pytest pytest-cov codecov
       - run: python -m pytest --cov=rainbowtable
       - run: codecov
 
